home-media-viewer/src/styles/hmv.module.scss
/* ... */
.contentDisplayContainer {
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: rgba(gray, 0.4);

    .closeButton {
        position: absolute;
        top: 0px;
        right: 0px;
        width: 43px;
        height: 60px;
        z-index: 100;
        font-size: 48px;
        color: white;
        background-color: rgba(0, 0, 0, 0.3);
        border: 1px white solid;
        padding: 3px;
        cursor: pointer;
    }

    .contentWrapper {
        width: 100%;
        height: 100%;

        img, video {
            object-fit: contain;
            width: 100%;
            height: 100%;
        }
    }

    .navigationArea {
        position: fixed;
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        top: 20vh;
        bottom: 20vh;
        z-index: 100;
        width: 15vw;
        cursor: pointer;

        > div {
            font-size: 5rem;
            font-weight: bold;
            color: $appTextColorAlternative;
            border-radius: 3rem;
        }
    }

    .previousContainer {
        left: 0px;
    }

    .nextContainer {
        right: 0px;
    }
}

.loginForm {
    margin: auto;
    width: 300px;
    padding: 10px;
    border: 1px solid black;
    border-radius: 15px;
    box-shadow: 1vw;

    .loginTitle {
        font-size: 32px;
        font-weight: bold;
        text-align: center;
        margin-bottom: 15px;
        border-bottom: 1px solid black;
    }

    form {
        width: 100%;

        label, input {
            width: 100%;
            font-size: 22px;
        }

        .inputContainer {

            label {
                display: inline-block;
                padding: 5px;
                padding-top: 10px;
            }
        }

        .controlContainer {
            margin-top: 10px;
            border-top: 1px solid black;
            padding-top: 10px;
        }
    }
}

.contentFilterContainer {
    padding: 10px;
    color: $appTextColorAlternative;
    border: $appBorderColor solid 1px;
    border-radius: 15px;
    margin: 15px;

    .filterHeader {
        font-size: 20px;

        .filterOpenToggle {
            font-size: 30px;
            display: inline-block;
            font-weight: bold;
            margin-right: 15px;
            cursor: pointer;
        }

        .filterList {
            display: flex;
            flex-flow: row wrap;

            > div {
                margin-right: 8px;
                padding: 5px;
                border: 1px solid $appBorderColor;
                border-radius: 10px;
                color: $appTextColor;
                background-color: $appBackgroundColor;
            }
        }
    }

    .filterHeader.filtered .filterCaption {
        font-weight: bold;
    }

    .filterBody {
        display: none;
        padding: 10px;
        
        .filterSection {
            padding: 10px;

            input[type='radio'] {
                margin-right: 5px;
            }

            > div {
                margin-bottom: 4px;
            }
        }

        .filterSection.fullWidth {
            width: 100%;
            max-width: 100%;
        }

        .filterTitle {
            padding-left: 10px;
            font-weight: bold;
            font-size: large;
            margin-bottom: 5px;
        }

        > div {
            flex-grow: 1;
            max-width: 400px;
            min-width: 250px;
            padding: 5px;

            > span {
                min-width: 100px;
            }

            > input {
                min-width: 200px;
            }

            .intervalContainer {
                width: 100%;
                min-width: 100% !important;
            }
        }

        .filterMap {
            height: 400px;
            width: 100%;
            overflow: hidden;
            position: relative;

            .mapCenter {
                margin: auto;
                border: 2px solid black;

                top: 100px;
                width: 200px;
                height: 200px;
                margin-top: 100px;
            }
        }
    }

    .filterBody.isOpen {
        display: flex;
        flex-flow: column wrap;
    }

    input[type="text"], input[type="date"] {
        border: 1px solid $appBorderColor;
        border-radius: 5px;
        padding: 3px;
        color: $appTextColorAlternative;
    }
}

.commandContainer {
    width: 100% !important;
    max-width: 100% !important;
}

.browserContainer {
    width: 100%;

    .pathNavigator {
        display: flex;
        flex-flow: row nowrap;
        padding: 5px;

        a {
            display: inline-block;
            padding: 10px;
            border: $appBorderColor 1px solid;
            border-radius: 15px;
            background-color: $appBackgroundAlternative;
            color: $appTextColorAlternative;
            margin: 5px 10px 5px 10px;
        }
    }

    .browserContent {
        display: flex;
        flex-flow: row wrap;
        width: 100%;
    }
}

.userHeaderContainer {
    padding: 10px;
    border: $appBorderColor 1px solid;
    border-radius: 15px;
    background-color: $appBackgroundAlternative;
    color: $appTextColorAlternative;
    margin: 10px;
    align-self: center;

    .userName {
        margin-right: 10px;
        font-size: large;
        font-weight: bold;
    }

    button {
        border: $appBorderColor 1px solid;
        border-radius: 5px;
        padding: 5px;
        background-color: $appBackgroundAlternative;
        color: $appTextColorAlternative;
        cursor: pointer;
    }
}
/* ... */

